tests/int/check_command/snapshots/integration__int__check_command__config__should_accept_explicit_clean_config.snap
---
source: tests/int/check_command/config.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_clean.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
